# python-project-83

./: .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml
page_analyzer/: app.py  data_base.py  db.py  url_utilities.py
page_analyzer/templates/: base.html  index.html  new.html  show.html
