[project]
name = "hexlet-code"
version = "0.1.0"
description = "Page Analyzer is a  web application that checks the main elements of websites that are important for search engine optimization."
authors = [{name = "Vitaliy Berezhnoy", email = "ipbvv@mail.ru"}]
maintainers = [{name = "Lyova Parsyan"}]
repository = "https://github.com/Vitaliy-Berezhnoy/python-project-83.git"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "flask>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "validators>=0.35.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.1",
]
